@@ -7,3 +7,5 @@ version := "11.0.0-SNAPSHOT"
 sbtPlugin := true
 
 seq(ScriptedPlugin.scriptedSettings: _*)
+
+scriptedLaunchOpts ++= Seq("-XX:+CMSClassUnloadingEnabled", "-XX:MaxPermSize=2024m")
